creacion de carpetas

--- a/tarea de diars 1/tarea de diars 1.csproj
+++ b/tarea de diars 1/tarea de diars 1.csproj
@@ -7,4 +7,10 @@
     <RootNamespace>tarea_de_diars_1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\CodeFirst\" />
+    <Folder Include="Models\DatabaseFirst\" />
+    <Folder Include="Models\ModelFirst\" />
+  </ItemGroup>
+
 </Project>
